Add deployment release track, ip, and secrets apis
Also updates python tools, since the old versions are not installable
any more due to version conflicts.
